--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <p>Ao discursar, o presidente russo fez ameaças e disse que quem tentar interferir sofrerá consequências nunca vistas</p>  
   <p>O primeiro-ministro do Reino Unido, Boris Johnson, anunciou mais uma série de sanções contra a Rússia. As novas medidas afetam bancos russos e impedem que o país faça transações em libras esterlinas.</p>
   <p>Johnson chamou o presidente russo de "agressor" e disse que Putin sempre teve a intenção de invadir a Ucrânia.</p>         
+  <p>Teste Inclusão</p>
 </body>
 </html>
