--- a/index.html
+++ b/index.html
@@ -10,5 +10,10 @@
   <p>O primeiro-ministro do Reino Unido, Boris Johnson, anunciou mais uma série de sanções contra a Rússia. As novas medidas afetam bancos russos e impedem que o país faça transações em libras esterlinas.</p>
   <p>Johnson chamou o presidente russo de "agressor" e disse que Putin sempre teve a intenção de invadir a Ucrânia.</p>         
   <p>Teste Inclusão</p>
+  <h2>The last Dance</h2>
+  <p>Fallen o Melhor Jogador Brasileiro De AWP Do Jogo Cs GO está no Time The Last Dance</p>
+  <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube<3</p>
+  <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
+  
 </body>
 </html>
