--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <p>Teste Inclusão</p>
   <h2>The last Dance</h2>
   <p>Fallen o Melhor Jogador Brasileiro De AWP Do Jogo Cs GO está no Time The Last Dance</p>
-  <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube<3</p>
+  <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube</p>
   <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
-  
+
 </body>
 </html>
