--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <p>Fallen o Melhor Jogador Brasileiro De AWP Do Jogo Cs GO está no Time The Last Dance</p>
   <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube</p>
   <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
+  <img src="THIAGO.jpg" alt="THIAGUIN MIU GRAU">
 
 </body>
 </html>
