--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+  <link rel="stylesheet" href="css\estilo.css">
   <title>
        Meu primeiro site
    </title>
@@ -14,7 +15,7 @@
   <p>Fallen o Melhor Jogador Brasileiro De AWP Do Jogo Cs GO está no Time The Last Dance</p>
   <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube</p>
   <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
-  <img src="THIAGO.jpg" alt="THIAGUIN MIU GRAU">
+  <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
 
 </body>
 </html>
