--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
    </title>
 </head>  
 <body>
-  <h1>Rússia ataca Ucrânia pela terra, pelo ar e pelo mar</h1>
-  <p>Ao discursar, o presidente russo fez ameaças e disse que quem tentar interferir sofrerá consequências nunca vistas</p>  
-  <p>O primeiro-ministro do Reino Unido, Boris Johnson, anunciou mais uma série de sanções contra a Rússia. As novas medidas afetam bancos russos e impedem que o país faça transações em libras esterlinas.</p>
-  <p>Johnson chamou o presidente russo de "agressor" e disse que Putin sempre teve a intenção de invadir a Ucrânia.</p>         
+  <h1>O universo é É imenso</h1>
+  <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
+  <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
+  <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz.[8] A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
   <p>Teste Inclusão</p>
-  <h2>The last Dance</h2>
-  <p>Fallen o Melhor Jogador Brasileiro De AWP Do Jogo Cs GO está no Time The Last Dance</p>
-  <p>Fer e outros Jogadores com habilidades Unicas também está neste time e estão entre os melhores de todo o Pais, Confira Tem Jogos Deles no Youtube</p>
+  <h2>Big Bang</h2>
+  <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
+  <p>A teoria do Big Bang é o modelo cosmológico prevalente que descreve como o Universo evoluiu desde os primeiros 10-44 segundos (Tempo de Planck) até hoje.</p>
+  <p>Observações de supernovas têm mostrado que o Universo está se expandindo a uma velocidade acelerada.</p>
   <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
+  
   <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
 
 </body>
