--- a/index.html
+++ b/index.html
@@ -1,24 +1,30 @@
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <link rel="stylesheet" href="css\estilo.css">
-  <title>
-       Meu primeiro site
-   </title>
-</head>  
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="css/estilo.css">
+  <title>Universo</title>
+</head>
 <body>
-  <h1>O universo é É imenso</h1>
-  <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
-  <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
-  <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz.[8] A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
-  <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
-  <p>Teste Inclusão</p>
-  <h2>Big Bang</h2>
-  <p>O big-bang[1], bigue-bangue[2][3] ou grande expansão[4] é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
-  <p>A teoria do Big Bang é o modelo cosmológico prevalente que descreve como o Universo evoluiu desde os primeiros 10-44 segundos (Tempo de Planck) até hoje.</p>
-  <p>Observações de supernovas têm mostrado que o Universo está se expandindo a uma velocidade acelerada.</p>
-  <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
+  <header>
+    <h1>Logotipo</h1>
+  </header>
+  <div class="container">
+    <h1>O universo é É imenso</h1>
+    <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
+    <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
+    <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz.[8] A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
+    <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
+    <p>Teste Inclusão</p>
+    <h2>Big Bang</h2>
+    <p>O big-bang[1], bigue-bangue[2][3] ou grande expansão[4] é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
+    <p>A teoria do Big Bang é o modelo cosmológico prevalente que descreve como o Universo evoluiu desde os primeiros 10-44 segundos (Tempo de Planck) até hoje.</p>
+    <p>Observações de supernovas têm mostrado que o Universo está se expandindo a uma velocidade acelerada.</p>
+    <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
 
   <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
-
+</div>
 </body>
 </html>
