alteração de tema e imagem

--- a/index.html
+++ b/index.html
@@ -9,9 +9,14 @@
 </head>
 <body>
   <header>
-    <h1>Logotipo</h1>
+    <h1>Galaxia</h1>
+    <figure>
+      <img src="img/Galaxia.jpg" alt="">
+    </figure>
   </header>
   <div class="container">
+    <p>As galáxias são formadas por diversos elementos cósmicos, como gases, poeiras e estrelas. Elas formam grandes estruturas heterogêneas que apresentam processos dinâmicos. As galáxias são estruturas celestes presentes no Universo</p>
+    <p>Galáxia é uma grande estrutura formada por vários corpos celestes.</p>
     <h1>O universo é É imenso</h1>
     <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
     <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
