Alterção de texto

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <div class="container">
     <p>As galáxias são formadas por diversos elementos cósmicos, como gases, poeiras e estrelas. Elas formam grandes estruturas heterogêneas que apresentam processos dinâmicos. As galáxias são estruturas celestes presentes no Universo</p>
     <p>Galáxia é uma grande estrutura formada por vários corpos celestes.</p>
+    <p>As galáxias contêm quantidades variadas de sistemas e aglomerados estelares e de tipos de nuvens interestelares. Entre esses objetos existe um meio interestelar esparso de gás, poeira e raios cósmicos. A matéria escura parece corresponder a cerca de 90% da massa da maioria das galáxias. Dados observacionais sugerem que podem existir buracos negros supermaciços no centro de muitas, se não todas as galáxias.</p>
     <h1>O universo é É imenso</h1>
     <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
     <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
