--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <h1>Galaxia</h1>
     <figure>
-      <img src="img/Galaxia.jpg" alt="">
+      <img class="img_topo" src="img/Galaxia.jpg" alt="">
     </figure>
   </header>
   <div class="container">
