--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
 
   <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
+
+  <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria e energia existente. Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros. É um local imenso e para muitos, infinito. Note que do latim, a palavra universum significa “todo inteiro” ou “tudo em um só”.</p>
+  <p><iframe width="1080" height="650" src="https://www.youtube.com/embed/RuOFlaeh-co" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
 </div>
 </body>
 </html>
