Coloquei um Link sobre o universo

--- a/index.html
+++ b/index.html
@@ -22,19 +22,25 @@
     <h1>O universo é É imenso</h1>
     <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
     <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
-    <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz.[8] A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
+    <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz. A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
     <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
     <p>Teste Inclusão</p>
     <h2>Big Bang</h2>
-    <p>O big-bang[1], bigue-bangue[2][3] ou grande expansão[4] é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
+    <p>O big-bang, bigue-bangue ou grande expansão é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
     <p>A teoria do Big Bang é o modelo cosmológico prevalente que descreve como o Universo evoluiu desde os primeiros 10-44 segundos (Tempo de Planck) até hoje.</p>
     <p>Observações de supernovas têm mostrado que o Universo está se expandindo a uma velocidade acelerada.</p>
-    <p>O meu amor por você é igual um misto quente sem queijo, Inseparavel</p>
+    <p>Big Bang" para se referir à ideia de que o universo estava originalmente muito quente e denso em algum tempo finito no passado. Desde então tem se resfriado pela expansão ao estado diluído atual e continua em expansão atualmente. A teoria é sustentada por explicações mais completas e precisas a partir de evidências científicas disponíveis e da observação.</p>
+    <p>Medições detalhadas da taxa de expansão do universo colocam o Big Bang em cerca de 13,8 bilhões * de anos atrás, que é considerada a idade do universo.</p>
+    <img src="img/Big.jpg" alt="">
 
+  <h1>Galaxia</h1>
+  <p>As galáxias são sistemas formados por milhares a trilhões de estrelas, poeira, gases e matéria escura. Sua classificação e identificação pode ocorrer de acordo com a forma, sendo assim elípticas, espirais ou irregulares (quando não possuem um contorno definido).</p>
+  <p>A Via Láctea, galáxia em que vivemos, é uma das maiores da região do Universo conhecida como Grupo Local e segue em processo de evolução, o que ocasionará a sua colisão com a galáxia de Andrômeda.</p>
   <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
 
   <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria e energia existente. Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros. É um local imenso e para muitos, infinito. Note que do latim, a palavra universum significa “todo inteiro” ou “tudo em um só”.</p>
   <p><iframe width="1080" height="650" src="https://www.youtube.com/embed/RuOFlaeh-co" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
 </div>
 </body>
 </html>
