--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>Galaxia</h1>
     <p>As galáxias são sistemas formados por milhares a trilhões de estrelas, poeira, gases e matéria escura. Sua classificação e identificação pode ocorrer de acordo com a forma, sendo assim elípticas, espirais ou irregulares (quando não possuem um contorno definido).</p>
     <p>A Via Láctea, galáxia em que vivemos, é uma das maiores da região do Universo conhecida como Grupo Local e segue em processo de evolução, o que ocasionará a sua colisão com a galáxia de Andrômeda.</p>
-    <p>"Galáxias são sistemas formados por uma vasta quantidade de estrelas, poeira, gases e matéria escura. Esse conjunto de elementos é unido pela força da gravidade. Algumas galáxias, em especial aquelas de maiores dimensões, possuem grandes buracos negros no seu centro, como é o caso daquela em que vivemos, a Via Láctea."</p>
+    <p>Galáxias são sistemas formados por uma vasta quantidade de estrelas, poeira, gases e matéria escura. Esse conjunto de elementos é unido pela força da gravidade. Algumas galáxias, em especial aquelas de maiores dimensões, possuem grandes buracos negros no seu centro, como é o caso daquela em que vivemos, a Via Láctea.</p>
     <img src="img/Universo.jpg" alt="THIAGUIN MIU GRAU">
 
     <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria e energia existente. Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros. É um local imenso e para muitos, infinito. Note que do latim, a palavra universum significa “todo inteiro” ou “tudo em um só”.</p>
