--- a/index.html
+++ b/index.html
@@ -8,23 +8,32 @@
  <title>Universo</title>
  </head>
  <body>
+    <ul>
+        <li><a href="#asgalaxias">as galaxias</a></li>
+        <li><a href="#Universo">Universos</a></li>
+    </ul>
  <header>
- <h1>Galaxia</h1>
- <figure>
- <img class="img_topo" src="img/Galaxia.jpg" alt="">
- </figure>
+     <section id="asgalaxias">
+      <h1>Galaxia</h1>
+      <figure>
+      <img class="img_topo" src="img/Galaxia.jpg" alt="">
+      </figure>
  </header>
- <div class="container">
-    <p>As galáxias são formadas por diversos elementos cósmicos, como gases, poeiras e estrelas. Elas formam grandes estruturas heterogêneas que apresentam processos dinâmicos. As galáxias são estruturas celestes presentes no Universo</p>
-    <p>Galáxia é uma grande estrutura formada por vários corpos celestes.</p>
-    <p>As galáxias contêm quantidades variadas de sistemas e aglomerados estelares e de tipos de nuvens interestelares. Entre esses objetos existe um meio interestelar esparso de gás, poeira e raios cósmicos</p>
-    <p> A matéria escura parece corresponder a cerca de 90% da massa da maioria das galáxias. Dados observacionais sugerem que podem existir buracos negros supermaciços no centro de muitas, se não todas as galáxias.</p>
+      <div class="container"> 
+      <p>As galáxias são formadas por diversos elementos cósmicos, como gases, poeiras e estrelas. Elas formam grandes estruturas heterogêneas que apresentam processos dinâmicos. As galáxias são estruturas celestes presentes no Universo</p>
+      <p>Galáxia é uma grande estrutura formada por vários corpos celestes.</p>
+      <p>As galáxias contêm quantidades variadas de sistemas e aglomerados estelares e de tipos de nuvens interestelares. Entre esses objetos existe um meio interestelar esparso de gás, poeira e raios cósmicos</p>
+      <p>A matéria escura parece corresponder a cerca de 90% da massa da maioria das galáxias. Dados observacionais sugerem que podem existir buracos negros supermaciços no centro de muitas, se não todas as galáxias.</p>
+    </section>
     <h1>O universo é É imenso</h1>
-    <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
-    <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
-    <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz. A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
-    <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
-    <p>Teste Inclusão</p>
+    <section id="Universo"> 
+      <h1>O universo é É imenso</h1>
+      <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
+      <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
+      <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz. A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
+      <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
+      <p>Teste Inclusão</p>
+    </section>  
     <h2>Big Bang</h2>
     <p>O big-bang, bigue-bangue ou grande expansão é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
     <p>A teoria do Big Bang é o modelo cosmológico prevalente que descreve como o Universo evoluiu desde os primeiros 10-44 segundos (Tempo de Planck) até hoje.</p>
@@ -40,6 +49,12 @@
 
     <p>Na astronomia, o Universo corresponde ao conjunto de toda a matéria e energia existente. Ele reúne os astros: planetas, cometas, estrelas, galáxias, nebulosas, satélites, dentre outros. É um local imenso e para muitos, infinito. Note que do latim, a palavra universum significa “todo inteiro” ou “tudo em um só”.</p>
     <p><iframe width="1080" height="650" src="https://www.youtube.com/embed/RuOFlaeh-co" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+
+    <footer>
+        <p>Desenvolvido por Brian Souza</p> 
+         <p><a href="https://www.instagram.com/b_r_i_a_n_s_o_u_z_a/">Instagram</a></p>
+         <p><a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q">YouTube</a></p>
+    </footer>
 
 </div>
 </body>
