--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <link rel="stylesheet" href="css/reset.css">
  <link rel="stylesheet" href="css/estilo.css">
  <title>Universo</title>
  </head>
@@ -13,6 +14,17 @@
         <li><a href="#Universo">Universos</a></li>
     </ul>
  <header>
+    <div class="menu">
+      <div clas="logo">
+        <h1>Crianção  de Páginas com HTML, CSS e JS</h1>
+      </div>
+      <div class="itens_menu">
+        <ul>
+          <li><a href="#sobre">Sobre</a></li>
+          <li><a href="#mais">Saiba Mais</a></li>
+        </ul>
+      </div>
+    </div>
      <section id="asgalaxias">
       <h1>Galaxia</h1>
       <figure>
