--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
  <header>
     <div class="menu">
       <div clas="logo">
-        <h1>Crianção  de Páginas com HTML, CSS e JS</h1>
       </div>
       <div class="itens_menu">
         <ul>
@@ -26,25 +25,30 @@
       </div>
     </div>
      <section id="asgalaxias">
-      <h1>Galaxia</h1>
-      <figure>
-      <img class="img_topo" src="img/Galaxia.jpg" alt="">
-      </figure>
+          <h1 style="color:white;">O Universo Da Marvel</h1>
+           <figure>
+            <img class="img_topo" src="img/img1.jpeg" alt="">
+           </figure>
  </header>
       <div class="container"> 
-      <p>As galáxias são formadas por diversos elementos cósmicos, como gases, poeiras e estrelas. Elas formam grandes estruturas heterogêneas que apresentam processos dinâmicos. As galáxias são estruturas celestes presentes no Universo</p>
-      <p>Galáxia é uma grande estrutura formada por vários corpos celestes.</p>
-      <p>As galáxias contêm quantidades variadas de sistemas e aglomerados estelares e de tipos de nuvens interestelares. Entre esses objetos existe um meio interestelar esparso de gás, poeira e raios cósmicos</p>
-      <p>A matéria escura parece corresponder a cerca de 90% da massa da maioria das galáxias. Dados observacionais sugerem que podem existir buracos negros supermaciços no centro de muitas, se não todas as galáxias.</p>
+      <p>Dentro das HQs da Marvel, o Multiverso é um conjunto de Universos distintos, cada um deles resultado de pequenas mudanças ao longo da história e pequenas escolhas divergentes que mudaram todo o rumo de seus personagens e tramas. Ou seja, seguimos a premissa básica de que cada universo é único entre si, com pequenas divergências em relação ao outro por conta de diferentes rumos da história.</p>
+      <br>
+      <p>Claro que existem universos onde essas diferenças são bem pequenas, onde as mudanças em relação à “Terra Principal” quase não são sentidas, ao mesmo tempo em que outras realidades, como o Universo Ultimate, são drasticamente diferentes da realidade principal. Além disso, é importante determinar a diferença entre universos alternativos e dimensões. Um universo alternativo segue essa premissa mencionada acima, enquanto uma dimensão é um espaço extra-terreno inserido em cada universo, mas que pode ter diferentes versões nas realidades alternativas – por exemplo, o Mojoverso e a Dimensão Sombria.</p>
+      <br>
+      <p>Quem já explorou muito essas realidades alternativas foi Uatu, o Vigia, o ser alienígena incumbido de observar todos os eventos que acontecem na Terra sem interferir neles. O extraterrestre protagonizou a franquia de histórias “O Que Aconteceria Se…?”, que imagina como teriam sido outras histórias no Universo Marvel, caso elas tivessem seguido um rumo diferente do que aconteceu originalmente. Essas histórias são ambientadas em diversos universos alternativos e teremos uma série animada inspirada no título, chamada What If…?, que será lançada no Disney+.      </p>
+
     </section>
-    <h1>O universo é É imenso</h1>
-    <section id="Universo"> 
-      <h1>O universo é É imenso</h1>
-      <p>O Universo é tudo o que existe fisicamente, a soma do espaço e do tempo e as mais variadas formas de matéria, como planetas, estrelas, galáxias e os componentes do espaço intergalácticostas</p>  
-      <p>O termo Universo pode ser usado em sentidos contextuais ligeiramente diferentes, denotando conceitos como o cosmo, o mundo ou a natureza</p>
-      <p>O universo observável tem de raio cerca de 46 bilhões de anos-luz. A observação científica do Universo levou a inferências de suas fases anteriores.</p>         
-      <p>Estas observações sugerem que o Universo é governado pelas mesmas leis físicas e constantes durante a maior parte de sua extensão e história.</p>
-      <p>Teste Inclusão</p>
+    <h2>Como surgiu a ideia do Multiverso da Marvel?</h2>
+    <section id="Como surgiu a ideia do Multiverso da Marvel?"> 
+      <h2>Como surgiu a ideia do Multiverso da Marvel?</h2>
+      <figure> 
+        <img src="img/Britânia.jpeg" alt="">
+    </figure>
+    <p>A Marvel Comics foi oficialmente fundada na década de 60, incorporando algumas editoras anteriores, como a Timely. E desde aquela época, alguns quadrinhos já flertavam com uma ficção científica mais aprofundada, como as HQs do Quarteto Fantástico por exemplo. Ainda assim, o conceito de Multiverso só foi ser aplicado oficialmente em 1983, em uma revista chamada The Daredevils, que fazia parte do selo Marvel UK.</p>
+   <br>
+    <p>Essa história em questão foi posteriormente republicada nas páginas de uma HQ do Capitão Britânia. Nela, vemos pela primeira vez o termo “Terra-616” sendo usado para designar o universo principal onde se passam as histórias da Marvel. Ah, e quem cunhou o termo? Alan Moore, em sua breve passagem pelo selo britânico dos quadrinhos da Casa das Ideias.</p>
+    <br>
+    <p>Aliás, o número é algo chamativo e mostra a principal diferença entre o Multiverso na Marvel e o Multiverso da DC. Enquanto na editora concorrente, a “continuidade principal” é uma “Terra-0”, sugerindo que ela é o ponto de partida para todas as outras realidades alternativas, na Marvel existem zilhões de universos e a linha “principal” da editora é apenas mais um deles, sem ser o “marco zero” desse Multiverso amplo.</p>
     </section>  
     <h2>Big Bang</h2>
     <p>O big-bang, bigue-bangue ou grande expansão é a teoria cosmológica dominante sobre o desenvolvimento inicial do universo.</p>
