--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <footer>
   <p>Desenvolvido por Brian Souza</p> 
-   <p><a href="https://www.instagram.com/b_r_i_a_n_s_o_u_z_a/">Instagram</a></p>
+   <p><a href="https://www.instagram.com/__briansouza__/">Instagram</a></p>
    <p><a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q">YouTube</a></p>
 </footer>
 
