--- a/coisinha.html
+++ b/coisinha.html
@@ -7,10 +7,10 @@
 
  </head>
  <body>
-     <h1>musica da marvel</h1>
+     <h1>musicas da marvel</h1>
      <th>Musica Marvel 2012</th><audio controls>
         <source src="horse.ogg" type="audio/ogg">
         <source src="musica/The Avengers.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
       </audio>
+      <p><a href="index.html">Voltar</a></p>
  </body>
