--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       </div>
       <div class="itens_menu">
         <ul>
-          <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#mais">Saiba Mais</a></li>
+
+          <p><a href="coisinha.html">Musicas da Marvel</a></p>
         </ul>
       </div>
     </div>
@@ -89,7 +89,7 @@
 </div> 
 
 <footer>
-  <p><a href="coisinha.html">oi</a></p>
+  
   <p>Desenvolvido por Brian Souza</p> 
    <p><a href="https://www.instagram.com/__briansouza__/">Instagram</a></p>
    <p><a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q">YouTube</a></p>
