--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="css/reset.css">
  <link rel="stylesheet" href="css/estilo.css">
- <title>Universo</title>
+ <title>Marvel</title>
  </head>
  <body>
     <ul>
@@ -21,6 +21,7 @@
         <ul>
 
           <p><a href="coisinha.html">Musicas da Marvel</a></p>
+          <p><a href="contato.html">Contato</a></p>
         </ul>
       </div>
     </div>
