--- a/coisinha.html
+++ b/coisinha.html
@@ -6,12 +6,13 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="css/reset.css">
  <link rel="stylesheet" href="css/estilo.css">
+ <link rel="icon" type="image/x-icon" href="img/favicon.ico">
  <title>Música</title>
  <head>
 
  </head>
  <body>
-     <h1>musicas da marvel</h1>
+     <h1>Músicas Da Marvel</h1>
      <th>Musica Marvel 2012</th><audio controls>
         <source src="horse.ogg" type="audio/ogg">
         <source src="musica/The Avengers.mp3" type="audio/mpeg">
