--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <link rel="stylesheet" href="css/reset.css">
  <link rel="stylesheet" href="css/estilo.css">
+ <link rel="icon" type="image/x-icon" href="img/favicon.ico">
  <title>Marvel</title>
  </head>
  <body>
