--- a/testecss.html
+++ b/testecss.html
@@ -81,28 +81,37 @@
 
         }
 
-        
+        .fixo{
+            position: fixed;
+            top: 0;
+            right: 0;
+            left: 0;
+            z-index: 1030;
+        }
+        .main{
+            margin-top: 4%;
+        }
 
 
     </style>
 </head>
 <body>
-    
-    <header>
-        <h1 style="background-color:brown;color: cyan;"> Teste CSS interno e Inline </h1>
-        <p style="background-color: aquamarine; font-style: italic;">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae esse atque autem rem aliquam. Iure laboriosam beatae in quidem possimus voluptatem, explicabo cupiditate aut minima natus quibusdam impedit quasi magni!</p>
-        <p style="background-color: aquamarine; font-style: italic;">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, corporis molestias itaque, ut perferendis tempora voluptate quibusdam beatae ea voluptas omnis rem commodi laboriosam odit nostrum architecto, quaerat consectetur corrupti!</p>
+    <header class="fixo">
+         <h1 style="background-color: rgb(134, 122, 122);color: #8fd5df;">Marvel</h1> 
     </header>
     <div class="main">
-        <h1>Testando....</h1>
+        <p  style="background-color: rgb(255,192,203); font-style: italic;"></p>
+    <p  style="background-color: rgb(255,192,203); font-style: italic;"></p>
+    <p  style="background-color: rgb(255,192,203); font-style: italic;"></p> 
         <div class="container">
-            <div class="topoesquerda">TopoEsquerdo</div>
-            <div class="topodireita">TopoDireito</div>
-            <div class="abaixoesquerda">AbaixoEsquerdo</div>
-            <div class="abaixodireita">AbaixoDireito</div>
-            <div class="centro">Centro ksak</div>
+            <h1>Testando...</h1>
+            <div class="topoesquerda">TopoEsq</div>
+            <div class="topodireita">TopoDir</div>
+            <div class="abaixoesquerda">AbaixoE</div>
+            <div class="abaixodireita">AbaixoD</div>
+            <div class="centro">Centro</div>
         </div>
-
     </div>
 </body>
+</html>
 </html>
