--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
  <title>Marvel</title>
  </head>
  <body>
+   <div class="fixo">
+   <div class="img_logo">
+   <img  src="img/marvelse.png">
+  </div>
     <ul>
       <li><a href="#Universo">Universos</a></li>
     </ul>
+
     
  <header>
     <div class="menu">
@@ -25,7 +30,28 @@
           <p><a href="contato.html">Contato</a></p>
         </ul>
       </div>
+      </div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
      <section id="Universo Marvel">
           <h3>O Universo Da Marvel</h3>
           
