--- a/contato.html
+++ b/contato.html
@@ -9,6 +9,26 @@
  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
  <title>Contato</title>
  <!DOCTYPE html>
+</head>
+
+<body>
+  <div class="fixo">
+   <div class="img_logo">
+     <img  src="img/marvelse.png">
+   </div>
+     <div class="itens_menu">
+       <ul>
+         <li><a href="#Como surgiu a ideia do Multiverso da Marvel?">Como surgiu a ideia do Multiverso da Marvel?</a></li>
+         <li><a href="#Universo">Universos</a></li>
+         <li><a href="#Universo Ultimate">Universo Ultimate</a>/li>
+         <li><a href="#Universo Cinematográfico da Marvel">Universo Cinematográfico da Marvel</a></li>
+         <li><a href="coisinha.html">Musicas da Marvel</a></li>
+         <li><a href="contato.html">Contato</a></li>
+       </ul>
+     </div>
+
+   
+<header>
 <html>
 <head>
   <body>
