Restauração do site

--- a/contato.html
+++ b/contato.html
@@ -1,108 +1,101 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
- <meta charset="UTF-8">
- <meta http-equiv="X-UA-Compatible" content="IE=edge">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <link rel="stylesheet" href="css/reset.css">
- <link rel="stylesheet" href="css/estilo.css">
- <link rel="icon" type="image/x-icon" href="img/favicon.ico">
- <title>Contato</title>
- <!DOCTYPE html>
-</head>
-
-<body>
-  <div class="fixo">
-   <div class="img_logo">
-     <img  src="img/marvelse.png">
-   </div>
-     <div class="itens_menu">
-       <ul>
-         <li><a href="#Como surgiu a ideia do Multiverso da Marvel?">Como surgiu a ideia do Multiverso da Marvel?</a></li>
-         <li><a href="#Universo">Universos</a></li>
-         <li><a href="#Universo Ultimate">Universo Ultimate</a>/li>
-         <li><a href="#Universo Cinematográfico da Marvel">Universo Cinematográfico da Marvel</a></li>
-         <li><a href="coisinha.html">Musicas da Marvel</a></li>
-         <li><a href="contato.html">Contato</a></li>
-       </ul>
-     </div>
-
-   
-<header>
-<html>
-<head>
-  <body>
-    <h1>Contato</h1>
-     <p><a href="index.html">Voltar</a></p>
-</body>
-<body class="fundo">
-  <header>
-      <nav class="menu">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/reset.css">
+  <link rel="stylesheet" href="css/estilo.css">
+  <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+  <title>Contato</title>
+ </head>
+<body>  
+    <header class="fixo">
           <div class="logo">
+            <img class="img_logo" src="img/marvelse.png" alt="">
           </div>
-          <div class="itens_menu">
-          <ul>
-
-          </ul>
-          </div>
-      </nav>
-  </header>
-  <div class="containerform">
-      <section>
-          <div class="form">
-              <form action="#">
-                  <div class="row">
-                      <div class="col-25">
-                          <label>Digite seu nome: </label>
-                      </div>
-                      <div class="col-75">
-                          <input type="text" placeholder="Coloque seu nome completo">
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-25">
-                          <label>Telefone: </label>
-                      </div>
-                      <div class="col-75">
-                          <input type="tel" placeholder="(99)99999-9999">
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-25">
-                          <label> E-mail</label>
-                      </div>
-                      <div class="col-75">
-                          <input type="email" placeholder="email@email.com">
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-25">
-                          <label> Assunto </label>
-                      </div>
-                      <div class="col-75">
-                          <select>
-                              <option value="1">Dúvidas</option>
-                              <option value="2">Reclamações</option>
-                              <option value="3">Sugestões</option>
-                              <option value="4">Outros</option>
-                          </select>
-                      </div>
-                  </div>
-                  <div class="row">
-                      <div class="col-25">
-                          <label> Menssagem</label>
-                      </div>
-                      <div class="col-75">
-                          <textarea name="messagem"  rows="10" cols="30"></textarea> 
-                      </div>
-                  </div>
-                  <div class="row">
-                      <input type="submit" value="Enviar">
-                  </div> 
-              </form>
-          </div>
-      </section>
-  </div>
-
+          <nav class="itens_menu">
+              <ul>
+                  <li><a href="index.html">Home</a></li>
+                  <li><a href="index.html#CS">Como Surgiu</a></li>
+                  <li><a href="index.html#UNVS">Universos</a></li>
+                  <li><a href="index.html#UNU">Ultimato</a></li>
+                  <li><a href="musicas.html">Músicas</a></li>
+                  <li><a href="contato.html">Contato</a></li>
+              </ul>
+          </nav>
+    </header>
+  <div class="container descer">
+    <section>
+        <h1>Entre em contato aqui</h1>
+        <div class="form">
+            <form action="https://api.sheetmonkey.io/form/4H5aooJsC34wErZyGifrNB" method="post">
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">Nome Completo</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="text" name="Nome" id="#" placeholder="Nome Completo">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">Telefone</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="tel" name="Telefone" id="#" placeholder="(99) 99999-9999">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">E-mail</label>
+                    </div>
+                    <div class="col-75">
+                        <input type="email" name="E-mail" id="#" placeholder="email@email.com">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">Estado</label>                            
+                    </div>
+                    <div class="col-75">
+                        <select name="Estado" id="#">
+                            <option value="#">SP</option>
+                            <option value="#">RJ</option>
+                            <option value="#">BA</option>
+                            <option value="#">MG</option>
+                            <option value="#">CE</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">Data</label> 
+                    </div>
+                    <div class="col-75">
+                        <input type="date" name="Data" id="">
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-25">
+                        <label for="#">Mensagems</label> 
+                    </div>
+                    <div class="col-75">
+                        <textarea name="Mensagem" id="" cols="50" rows="20" placeholder="Digite sua mensagem..."></textarea>
+                    </div>
+                </div>                               
+                <div class="row">
+                    <input type="submit" value="Enviar">                        
+                </div>
+            </form>
+        </div>
+            
+    </section>
+</div>
+        <footer>
+            <p>Desenvolvido por Brian Souza</p> 
+            <p><a href="https://www.instagram.com/__briansouza__/">Instagram</a></p>
+            <p><a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q">YouTube</a></p>
+        </footer>
 </body>
 </html>
