--- a/contato.html
+++ b/contato.html
@@ -94,8 +94,10 @@
 </div>
         <footer>
             <p>Desenvolvido por Brian Souza</p> 
-            <p><a href="https://www.instagram.com/__briansouza__/">Instagram</a></p>
-            <p><a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q">YouTube</a></p>
+            <figure class="icone">
+            <a href="https://www.instagram.com/__briansouza__/" target="_blank"><img class="icone" src="img/icon-instagram.png" width="30" height="30" alt=""></a>
+            <a href="https://www.youtube.com/channel/UCmuBw4wAugPjkIvjbmNq56Q" target="_blank"><img class="icone" width="30" height="30" src="img/icon-youtube.png" alt=""></a>
+            </figure>
         </footer>
 </body>
 </html>
